--- a/Data_Science_Task1.ipynb
+++ b/Data_Science_Task1.ipynb
@@ -4,7 +4,9 @@
   "metadata": {
     "colab": {
       "name": "Data Science Task1.ipynb",
-      "provenance": []
+      "provenance": [],
+      "authorship_tag": "ABX9TyOVSJ/dg1pQ0X1YcPoO/Jhq",
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -15,6 +17,16 @@
     }
   },
   "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/hit9117/Sparks-Foundation-M/blob/main/Data_Science_Task1.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
     {
       "cell_type": "markdown",
       "metadata": {
